Break up home page into components. Break up upload page into components. Add server side validation. Remove 3rd api endpoint. Move first data call into app store.

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -99,6 +99,10 @@ ul {
     padding: 0;
 }
 
+figure {
+    margin: 0;
+}
+
 .hidden {
     display: none;
 }
@@ -118,6 +122,3 @@ ul {
 .button-icon-right {
     margin-left: 5px;
 }
-//.MuiButton-root .MuiButton-label svg.MuiSvgIcon-root {
-//    margin-left: 5px;
-//}
