Add thumbnail gifs

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -1,5 +1,6 @@
 @import '../components/app';
 @import '../components/nav';
+@import '../components/picture';
 
 .page-home {
     //text-align: center;
