--- a/src/components/pages/VideoPlayerPage/styles/video-player-page.scss
+++ b/src/components/pages/VideoPlayerPage/styles/video-player-page.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles/main';
 
-.page-video {
+.page-video-player {
     max-width: $container-max-width;
     margin: 0 auto;
 }
