--- a/src/styles/helpers/variables.scss
+++ b/src/styles/helpers/variables.scss
@@ -1,10 +1,9 @@
 $container-width: 80vw;
 $container-width-mobile: 90vw;
 $container-max-width: 960px;
-
 $default-vertical-margin: 25px;
 $default-border-width: 1px;
 $default-border-style: solid;
-$default-hover-speed: .2s;
+$default-hover-speed: 0.2s;
 $default-hover-opacity: 0.8;
 $default-page-transition-speed: 0.75s;
