--- a/src/styles/helpers/typography.scss
+++ b/src/styles/helpers/typography.scss
@@ -1,12 +1,11 @@
 // Ubuntu Mono
-@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700&display=swap'); // sass-lint:disable-line no-url-protocols
+@import 'https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700&display=swap'; // sass-lint:disable-line no-url-protocols
 
 $font-family-ubuntu-mono: 'Ubuntu Mono', monospace;
 $font-style-ubuntu-mono-regular: 400;
 $font-style-ubuntu-mono-bold: 700;
-
 // Roboto
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap'); // sass-lint:disable-line no-url-protocols
+@import 'https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap'; // sass-lint:disable-line no-url-protocols
 
 $font-family-roboto: 'Roboto', monospace;
 $font-style-roboto-light: 300;
