Add drag n drop support. Add node transform stream. Add basic cli.

--- a/src/components/pages/UploadPage/styles/upload-page.scss
+++ b/src/components/pages/UploadPage/styles/upload-page.scss
@@ -5,19 +5,11 @@
     max-width: variables.$container-max-width;
     margin: 0 auto;
 
-    .info-table {
-        margin-bottom: 25px;
-    }
-}
-
-.form-upload {
-    margin-bottom: 30px;
-}
-
-.status {
-    &-files {
+    .form-upload {
         margin-bottom: 30px;
+    }
 
+    .form-files {
         .file {
             margin-bottom: 20px;
             display: flex;
@@ -64,4 +56,9 @@
             }
         }
     }
+
+    .form-progress {
+        margin-bottom: 30px;
+    }
 }
+
