--- a/src/components/Form/components/FormFile/styles/form-file.scss
+++ b/src/components/Form/components/FormFile/styles/form-file.scss
@@ -1,3 +1,46 @@
+@use '../../../../../styles/mixins/breakpoint' as *;
+
 .form-file {
-    // nothing
+    .file-restrictions {
+        margin-bottom: 10px;
+    }
+
+    &__drop-zone {
+        .file-restrictions {
+            margin: 10px 0 20px;
+        }
+
+        .drop-zone {
+            &__content {
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+
+                &-suffix {
+                    text-transform: none;
+                }
+            }
+        }
+
+        .file-wrapper {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        @include breakpoint(medium up) {
+            .drop-zone {
+                &__content {
+                    align-items: baseline;
+                    flex-direction: row;
+                }
+            }
+
+            .file-wrapper {
+                flex-direction: row;
+                justify-content: center;
+            }
+        }
+    }
 }
